--- a/docker-files/000-default.conf
+++ b/docker-files/000-default.conf
@@ -16,8 +16,8 @@ ServerSignature Off
 
     Options +MultiViews -FollowSymLinks -Indexes
 
-    ProxyPass "/" "http://ethereum-node:8545/"
-    ProxyPassReverse "/" "https://ethereum-node:8545/"
+    ProxyPass "/" "http://parity-ethereum-stable:8545/"
+    ProxyPassReverse "/" "https://parity-ethereum-stable:8545/"
 
     SSLEngine on
 
