--- a/docker-files/000-default.conf
+++ b/docker-files/000-default.conf
@@ -14,10 +14,17 @@ ServerSignature Off
 
     DocumentRoot "/var/www/html"
 
-    Options +MultiViews -FollowSymLinks -Indexes
+    ProxyPass "/mainnet/geth/stable" "http://ethereum-node-mainnet-stable:8545/"
+    ProxyPassReverse "/mainnet/geth/stable" "https://ethereum-node-mainnet-stable:8545/"
 
+    ProxyPass "/mainnet/geth/unstable" "http://ethereum-node-mainnet-unstable:8545/"
+    ProxyPassReverse "/mainnet/geth/unstable" "https://ethereum-node-mainnet-unstable:8545/"
+
+    # Default geth mainnet stable
     ProxyPass "/" "http://ethereum-node-stable:8545/"
     ProxyPassReverse "/" "https://ethereum-node-stable:8545/"
+
+    Alias /nodes /var/www/html/nodes.json
 
     SSLEngine on
 
